--- a/mi_trabajo/Notebook 2 - Crear y Consultar una Base de Datos relacional con MySQL.ipynb
+++ b/mi_trabajo/Notebook 2 - Crear y Consultar una Base de Datos relacional con MySQL.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -932,10 +932,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>MARY</td>\n",
+       "      <td>SMITH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>PATRICIA</td>\n",
+       "      <td>JOHNSON</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>LINDA</td>\n",
+       "      <td>WILLIAMS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>BARBARA</td>\n",
+       "      <td>JONES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ELIZABETH</td>\n",
+       "      <td>BROWN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>JENNIFER</td>\n",
+       "      <td>DAVIS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>MARIA</td>\n",
+       "      <td>MILLER</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>SUSAN</td>\n",
+       "      <td>WILSON</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>MARGARET</td>\n",
+       "      <td>MOORE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>DOROTHY</td>\n",
+       "      <td>TAYLOR</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  first_name last_name\n",
+       "0       MARY     SMITH\n",
+       "1   PATRICIA   JOHNSON\n",
+       "2      LINDA  WILLIAMS\n",
+       "3    BARBARA     JONES\n",
+       "4  ELIZABETH     BROWN\n",
+       "5   JENNIFER     DAVIS\n",
+       "6      MARIA    MILLER\n",
+       "7      SUSAN    WILSON\n",
+       "8   MARGARET     MOORE\n",
+       "9    DOROTHY    TAYLOR"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df = pd.read_sql('SELECT DISTINCT first_name,last_name FROM customer \\\n",
+    "INNER JOIN rental ON customer.customer_id=rental.customer_id \\\n",
+    "LIMIT 10;',con=db_connection)\n",
+    "display(df)"
+   ]
   }
  ],
  "metadata": {
