--- a/mi_trabajo/INFO261 - Notebook 5 - Uso de APIs, datos JSON e Introducción al SGBD Mongo.ipynb
+++ b/mi_trabajo/INFO261 - Notebook 5 - Uso de APIs, datos JSON e Introducción al SGBD Mongo.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1427,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1485,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1529,7 +1529,54 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Usando cliente Mongo\n",
+    "use randomdb\n",
+    "\n",
+    "db.people.insert([{nombre:\"Ignacio\",apellido:\"Jelvez\",edad:22},{nombre:\"Alfredo\",apellido:\"Morales\",edad:24},{nombre:\"Pablo\",apellido:\"Saez\",edad:23}])\n",
+    "\n",
+    "db.people.find({'nombre':'Pablo',}).pretty()\n",
+    "\n",
+    "db.people.update({ nombre: \"Pablo\" }, { nombre: \"Yoshi\", celular:\"123456789\" })\n",
+    "db.people.update({ nombre: \"Yoshi\" }, {$set:{celular:\"098123\"}})\n",
+    "db.people.update({ nombre: \"Yoshi\" }, {$set:{celular:\"76543\"}},{multi:true})\n",
+    "db.people.update({ nombre: \"Pablo\"},{nombre: \"Pablo\",apellido: \"Saez\",edad: 23},{upsert: true})\n",
+    "db.people.update({ nombre: \"Ignacio\", apellido:\"Fuentes\"},{nombre:\"Ignacio\",apellido:\"Fuentes\",edad:19},{upsert:true})\n",
+    "db.people.update({nombre: \"Ignacio\", apellido:\"Fuentes\"},{$set:{celular:\"123\"}})\n",
+    "\n",
+    "db.people.find({'nombre':'Ignacio',apellido:\"Fuentes\"}).pretty()\n",
+    "\n",
+    "db.people.remove({nombre:\"Ignacio\"})\n",
+    "db.people.remove({nombre:\"Ignacio\",apellido:\"Fuentes\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Usando PyMongo\n",
+    "import pymongo\n",
+    "from pymongo import MongoClient\n",
+    "from pprint import pprint\n",
+    "\n",
+    "client = MongoClient('localhost', 27017)\n",
+    "\n",
+    "db = client['randomdb2']\n",
+    "collection = db['people']\n",
+    "\n",
+    "collection.insert_many([{nombre:\"Ignacio\",apellido:\"Jelvez\",edad:22},{nombre:\"Alfredo\",apellido:\"Morales\",edad:24},{nombre:\"Pablo\",apellido:\"Saez\",edad:23}])\n",
+    "\n",
+    "people.update_one({ nombre: \"Yoshi\" }, { nombre: \"Yoshi\", celular:\"123456789\" })\n",
+    "people.update_one({nombre:\"Ignacio\"},{$set: {edad:3}})\n",
+    "people.update_many({apellido:\"Jelvez\"},{$set: {apellido:\"Gonzalez\"}})\n",
+    "\n",
+    "people.delete_one({apellido:\"Jelvez\"})\n",
+    "\n",
+    "for doc in collection.find({nombre:\"Ignacio\"}):\n",
+    "    pprint(doc)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1545,11 +1592,86 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"entidadrelacion.png\"></img>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Json propuesto\n",
+    "{\n",
+    "    nombre_ciudad:\"\",\n",
+    "    parametro:\"\",\n",
+    "    medicion:\n",
+    "    {\n",
+    "        valor:\"\",\n",
+    "        fecha:\"\",\n",
+    "        coordenadas:\n",
+    "        {\n",
+    "            latitud:\"\", \n",
+    "            longitud:\"\"\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CONSULTA DE DATOS A LA API OPENAQ\n",
+    "import requests \n",
+    "  \n",
+    "endpoint = \"https://api.openaq.org/v1/measurements\"\n",
+    "parameters = \"?country=CL&date_from=2018-9-28&date_to=2018-10-30\"\n",
+    "URL = endpoint+parameters\n",
+    "\n",
+    "r = requests.get(url = URL) \n",
+    "  \n",
+    "datos = r.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import pymongo\n",
+    "from pymongo import MongoClient\n",
+    "from pprint import pprint\n",
+    "\n",
+    "client = MongoClient('localhost', 27017)\n",
+    "db = client['chilemediciones']\n",
+    "collection = db['info']\n",
+    "\n",
+    "for info in datos['results']:\n",
+    "    if len(info) < 50 :\n",
+    "        documento = {\n",
+    "            \"nombre_ciudad\":info['location'],\n",
+    "            \"parametro\":info['parameter'],\n",
+    "            \"medicion\":\n",
+    "            {\n",
+    "                \"valor\":info['value'],\n",
+    "                \"fecha\":info['date']['local'],\n",
+    "                \"coordenadas\":\n",
+    "                {\n",
+    "                    \"latitud\":info['coordinates']['latitude'], \n",
+    "                    \"longitud\":info['coordinates']['latitude']\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "        collection.insert_one(documento)"
+   ]
   },
   {
    "cell_type": "markdown",
